tests/unit-fail-compilation/subtraction-null.ref
subtraction-null.c:3:3: error: Computing pointer difference between two different objects.
  Undefined behavior (UB-CEA5). See C11 sec. 6.5.6:9, J.2:1 item 48
Translation failed (config dumped). Run kcc -d subtraction-null.c to see commands run.
